--- a/diuwsgi.ini
+++ b/diuwsgi.ini
@@ -9,5 +9,5 @@ master          = true
 #每个工作进程有2个线程
 threads = 2
 #指的后台启动 日志输出的地方
-daemonize       = uwsgi.log
-pidfile=uwsgi.pid
+daemonize       = diuwsgi.log
+pidfile = diuwsgi.pid
